migrate to .net 8

--- a/src/Blazor.Server.UI/Pages/Parents/_ParentFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Parents/_ParentFormDialog.razor
@@ -4,7 +4,10 @@
 @using CleanArchitecture.Blazor.Application.Features.Students.DTOs;
 @using CleanArchitecture.Blazor.Application.Features.Students.Queries.GetById;
 @using CleanArchitecture.Blazor.Application.Services.DataServices;
-
+@using SixLabors.ImageSharp
+@using SixLabors.ImageSharp.Processing
+@using Color= MudBlazor.Color
+@using Size=MudBlazor.Size
 @inherits MudComponentBase
 @inject IStringLocalizer<Parents> L
 
