--- a/src/Blazor.Server.UI/Pages/Products/_ProductFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Products/_ProductFormDialog.razor
@@ -2,7 +2,10 @@
 @using ResizeMode = SixLabors.ImageSharp.Processing.ResizeMode
 @using Severity = MudBlazor.Severity
 @using Size = SixLabors.ImageSharp.Size
+@using Color= MudBlazor.Color
 @using SixLabors.ImageSharp.Formats.Png
+@using SixLabors.ImageSharp
+@using SixLabors.ImageSharp.Processing
 @inherits MudComponentBase
 @inject IJSRuntime JS
 @inject IStringLocalizer<Products> L
