--- a/src/Blazor.Server.UI/Pages/Students/_StudentFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Students/_StudentFormDialog.razor
@@ -3,7 +3,8 @@
 @using CleanArchitecture.Blazor.Application.Services.DataServices;
 @using shortid;
 @using shortid.Configuration;
-
+@using SixLabors.ImageSharp
+@using SixLabors.ImageSharp.Processing
 @inherits MudComponentBase
 @inject IStringLocalizer<Students> L
 
