--- a/src/Blazor.Server.UI/Pages/Identity/Users/_UserForm.razor
+++ b/src/Blazor.Server.UI/Pages/Identity/Users/_UserForm.razor
@@ -2,6 +2,9 @@
 @using CleanArchitecture.Blazor.Application.Features.Identity.Dto
 @using ResizeMode = SixLabors.ImageSharp.Processing.ResizeMode
 @using Severity = MudBlazor.Severity
+@using Color = MudBlazor.Color
+@using SixLabors.ImageSharp
+@using SixLabors.ImageSharp.Processing
 @using Size = SixLabors.ImageSharp.Size
 @using SixLabors.ImageSharp.Formats.Png
 @inherits MudComponentBase
