--- a/src/Blazor.Server.UI/Pages/Pilots/_PilotFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/_PilotFormDialog.razor
@@ -1,6 +1,7 @@
 ﻿@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant;
 @using CleanArchitecture.Blazor.Application.Features.Pilots.Commands.AddEdit
-
+@using SixLabors.ImageSharp
+@using SixLabors.ImageSharp.Processing
 @inherits MudComponentBase
 @inject IStringLocalizer<Pilots> L
 
