add trip map page

--- a/src/Blazor.Server.UI/Pages/Mobile/Trip/StartTrip.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Trip/StartTrip.razor
@@ -26,7 +26,7 @@
                 <MudSelectItem T="string" Value="@("location yyy 2")" />
                 <MudSelectItem T="string" Value="@("location yyy 3")" />
             </MudSelect>
-            <MudButton Class="my-3" Size="Size.Large" Variant="Variant.Filled" Color="Color.Primary" OnClick="@(()=>NavigationManager.NavigateTo("/mobile/tripmap"))">Start a trip</MudButton>
+            <MudButton Class="my-3" Size="Size.Large" Variant="Variant.Filled" Color="Color.Primary" OnClick="@(()=>NavigationManager.NavigateTo("/mobile/triponmap"))">Start a trip</MudButton>
        </div>
     </MudForm>
 </MudPaper>
