--- a/src/Blazor.Server.UI/Pages/_Layout.cshtml
+++ b/src/Blazor.Server.UI/Pages/_Layout.cshtml
@@ -108,7 +108,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script src="/_content/Html5QrcodeBlazor.Wrapper/html5-qrcode.min.js"></script>
     <script src="_content/Blazor.Geolocation/blazorators.geolocation.g.js"></script>
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdkgvniMdyFPAcTlcZivr8f30iU-kn1T0&v=beta"></script>
+    <script src="_content/BlazorGoogleMaps/js/objectManager.js"></script>
     <script type="text/javascript">
 
         async function externalLogin(provider, dotNetHelper) {
