--- a/src/Blazor.Server.UI/Shared/MobileLayout.razor
+++ b/src/Blazor.Server.UI/Shared/MobileLayout.razor
@@ -5,7 +5,7 @@
     <MudThemeProvider />
 
     <MudLayout>
-        <MudContainer MaxWidth="MaxWidth.Small" Class="mb-4 mt-4" Style="height:max-content">
+        <MudContainer MaxWidth="MaxWidth.Medium" Class="mb-4 mt-4" Style="height:max-content">
             @Body
          </MudContainer>
     </MudLayout>
