--- a/src/Blazor.Server.UI/Shared/TripLayout.razor
+++ b/src/Blazor.Server.UI/Shared/TripLayout.razor
@@ -8,7 +8,7 @@
 <div class="d-flex mt-2">
     @Body
 </div>
-<MudAppBar Bottom="true" Color="Color.Transparent" Fixed="true" Elevation="3" Class="py-3">
+<MudAppBar Bottom="true" Style="@($"background:{Colors.Shades.White};color:{Colors.Grey.Darken4}")" Fixed="true" Elevation="3" Class="py-3">
     <div class="d-flex justify-center flex-grow-1 gap-5">
         <div class="d-flex flex-column justify-center">
             <MudIconButton Icon="@Icons.Material.Outlined.Map"></MudIconButton>
