--- a/src/Blazor.Server.UI/Pages/Mobile/Login/Index.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Login/Index.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 <PageTitle>Login</PageTitle>
 <MudPaper Elevation="0" Class="d-flex flex-column justify-center flex-grow-1 pa-4 mt-10" >
-    <MudImage Src="/img/logo.png"></MudImage>
+    <MudImage Src="/img/logo.png" Width="400" Class="align-self-center"></MudImage>
     <MudForm>
         <div class="d-flex flex-column justify-center gap-4">
             <MudText Align="Align.Center" Typo="Typo.h3">Welcome back</MudText>
