--- a/src/Blazor.Server.UI/Shared/TripLayout.razor
+++ b/src/Blazor.Server.UI/Shared/TripLayout.razor
@@ -11,19 +11,19 @@
 <MudAppBar Bottom="true" Style="@($"background:{Colors.Shades.White};color:{Colors.Grey.Darken4}")" Fixed="true" Elevation="3" Class="py-3">
     <div class="d-flex justify-center flex-grow-1 gap-5">
         <div class="d-flex flex-column justify-center">
-            <MudIconButton Icon="@Icons.Material.Outlined.Map"></MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Outlined.Map" Href="/mobile/triponmap"></MudIconButton>
             <MudText Align="Align.Center" Typo="Typo.caption">Map</MudText>
         </div>
         <div class="d-flex flex-column justify-center">
-            <MudIconButton Icon="@Icons.Material.Outlined.QrCodeScanner"></MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Outlined.QrCodeScanner" Href="/mobile/scan"></MudIconButton>
             <MudText Align="Align.Center" Typo="Typo.caption">Scan</MudText>
         </div>
         <div class="d-flex flex-column justify-center">
-            <MudIconButton Icon="@Icons.Material.Outlined.Checklist"></MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Outlined.Checklist" Href="/mobile/route"></MudIconButton>
             <MudText Align="Align.Center" Typo="Typo.caption">Roster</MudText>
         </div>
         <div class="d-flex flex-column justify-center">
-            <MudIconButton Icon="@Icons.Material.Outlined.Navigation"></MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Outlined.Navigation" Href="/mobile/starttrip"></MudIconButton>
             <MudText Align="Align.Center" Typo="Typo.caption">Drive</MudText>
         </div>
     </div>
