--- a/src/Blazor.Server.UI/Shared/TripLayout.razor
+++ b/src/Blazor.Server.UI/Shared/TripLayout.razor
@@ -5,7 +5,7 @@
     <MudSpacer />
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
 </MudAppBar>
-<div class="d-flex mt-2">
+<div class="d-flex mt-2" style="padding-bottom:60px;padding-top:8px">
     @Body
 </div>
 <MudAppBar Bottom="true" Style="@($"background:{Colors.Shades.White};color:{Colors.Grey.Darken4}")" Fixed="true" Elevation="3" Class="py-3">
