--- a/src/Blazor.Server.UI/Shared/TripLayout.razor
+++ b/src/Blazor.Server.UI/Shared/TripLayout.razor
@@ -19,7 +19,7 @@
             <MudText Align="Align.Center" Typo="Typo.caption">Scan</MudText>
         </div>
         <div class="d-flex flex-column justify-center">
-            <MudIconButton Icon="@Icons.Material.Outlined.Checklist" Href="/mobile/route"></MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Outlined.Checklist" Href="/mobile/passengerlist"></MudIconButton>
             <MudText Align="Align.Center" Typo="Typo.caption">Roster</MudText>
         </div>
         <div class="d-flex flex-column justify-center">
