--- a/src/Blazor.Server.UI/Pages/Mobile/Trip/_Imports.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Trip/_Imports.razor
@@ -1,2 +1,4 @@
-﻿@layout TripLayout
-@attribute [AllowAnonymous]
+﻿@using Blazor.Server.UI.Pages.Mobile.Trip.Components
+@using CleanArchitecture.Blazor.Application.Services.DataServices
+@layout TripLayout
+@inject NavigationManager NavigationManager
