--- a/src/Blazor.Server.UI/Pages/TripReports/_TripReportFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/_TripReportFormDialog.razor
@@ -65,7 +65,7 @@
                                    Required="true"
                                    RequiredError="@L["Organization is required."]"
                         @bind-Value="@model.TenantId">
-                            @foreach (var item in TenantsService.DataSource)
+                            @foreach (var item in TenantService.DataSource)
                             {
                                 <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
                             }
@@ -93,12 +93,7 @@
     [EditorRequired][Parameter] public AddEditTripReportCommand model { get; set; } = null!;
     [Parameter] public UserProfile UserProfile { get; set; } = null!;
     [Inject] private IMediator _mediator { get; set; } = default!;
-    [Inject]
-    private ITenantService TenantsService { get; set; } = default!;
-    [Inject]
-    private IPilotService PilotService { get; set; } = default!;
-    [Inject]
-    private IItineraryService ItineraryService { get; set; } = default!;
+
 
     void ItineraryChanged(int? id)
     {
