--- a/src/Blazor.Server.UI/Pages/Itineraries/Itineraries.razor
+++ b/src/Blazor.Server.UI/Pages/Itineraries/Itineraries.razor
@@ -183,9 +183,9 @@
                 <MudText Typo="Typo.body2" Class="mud-text-secondary">@context.Item.Bus.Description</MudText>
             </CellTemplate>
         </PropertyColumn>
-        <PropertyColumn Property="x => x.Pilot" Title="@L[_currentDto.GetMemberDescription(x=>x.Pilot)]">
+        <PropertyColumn Property="x => x.Driver" Title="@L[_currentDto.GetMemberDescription(x=>x.Driver)]">
             <CellTemplate>
-                <AvatarCard ImageUrl="@context.Item.Pilot.ProfilePicture" Title="@context.Item.Pilot.DisplayName" Subtitle="@context.Item.Pilot.Phone"></AvatarCard>
+                <AvatarCard ImageUrl="@context.Item.Driver?.ProfilePictureDataUrl" Title="@context.Item.Driver?.DisplayName" Subtitle="@context.Item.Driver?.PhoneNumber"></AvatarCard>
             </CellTemplate>
         </PropertyColumn>
         <PropertyColumn Property="x => x.School" Title="@L[_currentDto.GetMemberDescription(x=>x.School)]">
@@ -234,10 +234,8 @@
     [Inject]
     private IState<UserProfileState> UserProfileState { get; set; } = null!;
     private UserProfile UserProfile => UserProfileState.Value.UserProfile;
-    [Inject]
-    private IItineraryService ItineraryService { get; set; } = default!;
-    [Inject]
-    private IMediator Mediator { get; set; } = default!;
+   
+
     [Inject]
     private IMapper Mapper { get; set; } = default!;
     [CascadingParameter]
