--- a/src/Blazor.Server.UI/Pages/Students/_StudentFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Students/_StudentFormDialog.razor
@@ -72,7 +72,7 @@
                                    Required="true"
                                    RequiredError="@L["Organization is required."]"
                         @bind-Value="@model.TenantId">
-                            @foreach (var item in TenantsService.DataSource)
+                            @foreach (var item in TenantService.DataSource)
                             {
                                 <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
                             }
@@ -101,10 +101,7 @@
     [Inject] private IMediator _mediator { get; set; } = default!;
     [Parameter] public UserProfile UserProfile { get; set; } = null!;
     [Inject] private IUploadService _uploadService { get; set; } = default!;
-    [Inject]
-    private ITenantService TenantsService { get; set; } = default!;
-    [Inject]
-    private ISchoolService SchoolService { get; set; } = default!;
+ 
     void GenerateUID()
     {
         var uid = ShortId.Generate(new GenerationOptions(length: 8));
