--- a/src/Blazor.Server.UI/Pages/TripReports/CreateTrip.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/CreateTrip.razor
@@ -66,7 +66,7 @@
                                        Required="true"
                                        RequiredError="@L["Organization is required."]"
                             @bind-Value="@model.TenantId">
-                                @foreach (var item in TenantsService.DataSource)
+                                @foreach (var item in TenantService.DataSource)
                                 {
                                     <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
                                 }
@@ -101,12 +101,7 @@
     AddEditTripReportCommand model { get; set; } = new();
 
     [Inject] private IMediator _mediator { get; set; } = default!;
-    [Inject]
-    private ITenantService TenantsService { get; set; } = default!;
-    [Inject]
-    private IPilotService PilotService { get; set; } = default!;
-    [Inject]
-    private IItineraryService ItineraryService { get; set; } = default!;
+ 
     [Inject]
     protected NavigationManager NavigationManager { get; set; } = null!;
     protected override  Task OnInitializedAsync()
