--- a/src/Blazor.Server.UI/Shared/MainLayout.razor
+++ b/src/Blazor.Server.UI/Shared/MainLayout.razor
@@ -10,17 +10,14 @@
         <AuthorizeView>
             <NotAuthorized>
                 <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex align-center" Style="height: 100vh;">
-                    <div class="d-flex flex-column mud-width-full">
-                        <MudPaper Elevation="25" Class="pa-8" Width="100%" MaxWidth="500px">
-                            <MudIcon Icon="@Icons.Custom.Brands.MudBlazor" Size="Size.Large" Style="width:100px; height:100px;" />
+
+                    <MudPaper Elevation="25" Class="pa-8" Width="100%" MaxWidth="500px">
                             @Body
-                        </MudPaper>
-                        <MudAlert Severity="MudBlazor.Severity.Info" Class="mt-8 mud-width-full" Style="max-width:500px;">@L["authentication is required, click"] <MudLink Href="/"> @L["sign in"]</MudLink></MudAlert>
-                    </div>
+                    </MudPaper>
+               
                 </MudContainer>
             </NotAuthorized>
             <Authorized>
-
                 <HeaderMenu NavigationMenuDrawerOpen="_navigationMenuDrawerOpen"
                             OpenCommandPalette="OpenCommandPalette"
                             IsDarkMode="@LayoutService.IsDarkMode"
@@ -47,6 +44,7 @@
                         </ErrorBoundary>
                     </MudContainer>
                 </MudMainContent>
+                <RedirectToTrip />
                 <UserLoginState />
             </Authorized>
         </AuthorizeView>
