--- a/src/Blazor.Server.UI/_Imports.razor
+++ b/src/Blazor.Server.UI/_Imports.razor
@@ -1,5 +1,7 @@
 @using System.Net.Http
 @using System.Net.Http.Json
+@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant
+@using CleanArchitecture.Blazor.Application.Services.DataServices
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -38,10 +40,20 @@
 @using CleanArchitecture.Blazor.Application.Common.Configurations
 @using MudExtensions
 @using MudExtensions.Enums
+@using Severity = MudBlazor.Severity
+@using Color= MudBlazor.Color
 @inject DashboardSettings Settings
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 @inject IConfiguration Config
 @inject IAuthorizationService AuthService 
-
+@inject ITenantService TenantService
+@inject IPicklistService PicklistService
+@inject IPilotService PilotService
+@inject ISchoolService SchoolService
+@inject IBusService BusService
+@inject IUserService UserService
+@inject IItineraryService ItineraryService
+@inject IValidationService Validator
+@inject IMediator Mediator
 @attribute [Authorize]
