--- a/src/Blazor.Server.UI/Pages/IncrementCountComponent.razor
+++ b/src/Blazor.Server.UI/Pages/IncrementCountComponent.razor
@@ -1,6 +1,6 @@
 ﻿@using CleanArchitecture.Blazor.Application.Services;
-@using Stl.Fusion.Blazor;
-@using Stl.Fusion.Extensions;
+@using ActualLab.Fusion.Blazor;
+@using ActualLab.Fusion.Extensions;
 
 @inherits ComputedStateComponent<string>
 @inject CounterService CounterService
