--- a/src/Blazor.Server.UI/Pages/TripMonitor/DasboardComponent.razor
+++ b/src/Blazor.Server.UI/Pages/TripMonitor/DasboardComponent.razor
@@ -1,9 +1,9 @@
-﻿@using Stl.CommandR.Commands;
-@using Stl.Fusion.Blazor;
+﻿@using ActualLab.CommandR.Commands;
+@using ActualLab.Fusion.Blazor;
 @using CleanArchitecture.Blazor.Application.Services;
-@using Stl.Fusion.Extensions;
-@using Stl.Fusion.UI;
-@using Stl.Fusion;
+@using ActualLab.Fusion.Extensions;
+@using ActualLab.Fusion.UI;
+@using ActualLab.Fusion;
 @inherits ComputedStateComponent<string>
 @inject ITripMonitor _tripMonitor
 @inject UICommander UICommander
