--- a/src/Blazor.Server.UI/Pages/TripMonitor/StateOfStateBadge.razor
+++ b/src/Blazor.Server.UI/Pages/TripMonitor/StateOfStateBadge.razor
@@ -1,6 +1,6 @@
-﻿@using Stl.Async;
-@using Stl.Fusion;
-@using Stl.Fusion.Blazor;
+﻿@using ActualLab.Async;
+@using ActualLab.Fusion;
+@using ActualLab.Fusion.Blazor;
 @implements IDisposable
 @*
     StateOfStateBadge:
