--- a/src/Blazor.Server.UI/Pages/TripReports/DeviceScanner.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/DeviceScanner.razor
@@ -14,8 +14,8 @@
 @using Html5QrcodeBlazor.Wrapper;
 @using System.Text.Json;
 @using System.Text.Json.Serialization;
-@using Stl.CommandR.Commands;
-@using Stl.Fusion.UI;
+@using ActualLab.CommandR.Commands;
+@using ActualLab.Fusion.UI;
 @implements IAsyncDisposable
 @inject Html5QrcodeReader cameraBarcodeReader
 @inject IGeolocationService geolocation
