--- a/src/Blazor.Server.UI/Pages/Mobile/Trip/TripOnMap.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Trip/TripOnMap.razor
@@ -1,40 +1,24 @@
 ﻿@page "/mobile/triponmap/{RouteId:int}"
+@using CleanArchitecture.Blazor.Application.Features.TripReports.DTOs
+@using CleanArchitecture.Blazor.Application.Features.TripReports.Queries.GetById
 @using GoogleMapsComponents
 @using GoogleMapsComponents.Maps
 @using Size= MudBlazor.Size
 @inject NavigationManager NavigationManager
+@inject IMediator Sender
 @implements IAsyncDisposable
 <PageTitle>General information</PageTitle>
 
 <MudPaper Elevation="0" Class="d-flex flex-column justify-space-between flex-grow-1 pa-4 mt-10 gap-4">
-    <div class="d-flex flex-row justify-space-between align-center gap-1">
-        <div class="d-flex flex-column justify-space-between my-2  gap-1">
-            <MudText Typo="Typo.h6">General information</MudText>
-            <div class="d-flex flex-row align-center   gap-1">
-                <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Title="bus no." />
-                <MudText Typo="Typo.body2">School bus #1 - 69-929L </MudText>
-            </div>
-            <div class="d-flex flex-row align-center   gap-1">
-                <MudIcon Icon="@Icons.Material.Filled.AccountCircle" Title="driver" />
-                <MudText Typo="Typo.body2">Driver: John Anderson </MudText>
-            </div>
-        </div>
-        <div class="d-flex flex-column">
-            <MudText Typo="Typo.h3">09:41:17 AM</MudText>
-            <div class="d-flex flex-row align-center   gap-1 ">
-                <MudIcon Icon="@Icons.Material.Filled.CalendarMonth" Title="date" />
-                <MudText Typo="Typo.body2">Monday. June 6 </MudText>
-            </div>
-        </div>
-    </div>
-    <div class="d-flex flex-column">
-        <MudText Typo="Typo.h6">Route information</MudText>
-        <div class="d-flex flex-row justify-space-between align-center   gap-2">
-            <MudTextField @bind-Value="start" Label="start location" Variant="Variant.Outlined"></MudTextField>
-            <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Route" Title="route" />
-            <MudTextField @bind-Value="final" Label="final location" Variant="Variant.Outlined"></MudTextField>
-        </div>
-    </div>
+    @if (_tripReport is null)
+    {
+        <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
+    }
+    else
+    {
+        <GeneralInformation Data="@_tripReport"></GeneralInformation>
+    }
+    
     <div class="d-flex flex-row justify-space-between align-center gap-2">
         <div class="d-flex flex-column my-2 gap-1">
             <MudText Typo="Typo.h6">Total passengers on board</MudText>
@@ -57,8 +41,11 @@
     private GoogleMap? _map1;
     private MapOptions _mapOptions;
     private DirectionsRenderer _dirRend;
-    protected override void OnInitialized()
+    private TripReportDto? _tripReport=null;
+
+    protected override async Task OnInitializedAsync()
     {
+
         _mapOptions = new MapOptions()
             {
                 Zoom = 13,
@@ -69,6 +56,12 @@
                 },
                 MapTypeId = MapTypeId.Roadmap
             };
+
+       await LoadRoute();
+    }
+    private async Task LoadRoute()
+    {
+        _tripReport = await Mediator.Send(new GetTripReportByIdQuery() { Id = RouteId });
     }
     private async Task OnAfterInitAsync()
     {
